добавил nanoid, styled-components и начальную разметку

--- a/src/index.css
+++ b/src/index.css
@@ -19,8 +19,8 @@ body {
   line-height: 1.5;
 
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  /* align-items: flex-start; */
   flex-direction: column;
 }
 
