--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  /* background-color: rgb(226, 217, 217); */
+  background-color: rgb(226, 217, 217);
   line-height: 1.5;
 
   display: flex;
-  justify-content: flex-start;
-  /* align-items: flex-start; */
+  align-items: center;
   flex-direction: column;
+  /* align-items: flex-start; */
 }
 
 body:nth-last-of-type() code {
