--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ body {
   line-height: 1.5;
 
   display: flex;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   /* align-items: flex-start; */
