--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@ body {
 
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  /* align-items: center;
+  flex-direction: column; */
   /* align-items: flex-start; */
 }
 
